@@ -1,3 +1,7 @@
+2004-10-13  Kazuhiko  <kazuhiko@fdiary.net>
+	* category.rb: more revise for mod_ruby. add 'title' attribute in
+	categor_icon_sample. correct icon url in category_anchor
+
 2004-10-12  Kazuhiko  <kazuhiko@fdiary.net>
 	* category.rb: revise for mod_ruby
 
